Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-7651

[linearstore] Using write page cache sizes of 1 and 2 (kiB) cause floating point exception on startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • qpid-cpp-1.37.0
    • C++ Broker
    • None

    Description

      The help for linearstore parameter wcache-page-size indicates that legal values are powers of 2 between 1 and 128. In addition, the validation for this parameter allows these values. However, the minimum value should be 4, and using either 1 or 2 as a value will cause a floating point exception when the broker is started.

      Attachments

        Issue Links

          Activity

            People

              kpvdr Kim van der Riet
              kpvdr Kim van der Riet
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: