QPID-7651: Fixed incorrect parameter handling for --wcache-num-pages parameter